Rewrite README with full architecture documentation
Covers project structure, REST endpoints, service interfaces, extension
points, implementation guide, database schema, two-connection pattern,
workflow/idempotency, plan approval, and configuration reference.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>